--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
             <ul>
                 <!--ul 1-->
                 <h3>Cweb</h3>
-                <P>Somos uma empresa dedicada de imobiliaria</P>
+                <P>Somos uma empresa 
+                dedicada de imobiliaria</P>
                 <div class="redes-sociais">
                     <img src="img/facebook.png" alt="facebook">
                     <img src="img/instagram.png" alt="instagram">
@@ -242,13 +243,19 @@
                 <h3>Suporte</h3>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Como funciona</a></li>
+                <li><a href="#">Caracteisticas</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Comunicando</a></li> 
             </ul>
             <!--final da ul 3-->
 
             <!--ul 4-->
-            <ul></ul>
+            <ul>
+                <h3>Nós contate</h3>
+                <li>(55) 41 9945-6788</li>
+                <li>seila@gmail.com</li>
+                <li>Brasil</li>
+            </ul>
             <!--final da ul 4-->
         </div>
     </footer>
