--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <nav>
                     <div class="logo"><a href="index.html">Cweb</a></div>
                     <ul class="ul">
-                        <li> <a href="#"#>home</a> </li>
-                        <li> <a href="#"#>serviços</a> </li>
-                        <li> <a href="#"#>sobre</a> </li>
-                        <li> <a href="#"#>contato</a> </li>
+                        <li> <a href="#home"#>home</a> </li>
+                        <li> <a href="#servicos"#>serviços</a> </li>
+                        <li> <a href="#sobre"#>sobre</a> </li>
+                        <li> <a href="#contato"#>contato</a> </li>
                         <li> <a href="#"#> <button class="btn-gradient">Começar</button> </a> </li>
                     </ul>
                     <div class="menu-icon">
@@ -36,7 +36,7 @@
         <!-- fim do header --> 
 
         <!--main--> 
-        <main>
+        <main id="home">
             <div class="container">
                 <div class="main-text">
                     <h1>CWEB IMOBILIARIA</h1>
@@ -58,7 +58,7 @@
     <!--fim do fundo verde-->
 
     <!--section resultados-->
-    <section class="resultados">
+    <section id="servicos" class="resultados">
         <!--container-->
         <div class="container">
             <div class="resultados-text">
@@ -87,7 +87,7 @@
     <!--final resultados-->
 
     <!--section diferenciais-->
-    <section>
+    <section id="sobre">
         <div class="diferenciais">
             <!--container-->
             <div class="container">
@@ -147,7 +147,7 @@
         <!--container-->
         <div class="container">
 
-            <p class="azul">escolha o seu melhor</p>
+            <p id="contato" class="azul">escolha o seu melhor</p>
             <h2>30 melhores lugares do mundo</h2>
 
             <!--cards-->
@@ -261,6 +261,7 @@
     </footer>
       <!--final do footer-->
     <script src="js/main.js"></script>
+    <script src="js/aplicativo.js"></script>
 </body>
 <!--final do body-->
 </html>
