--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <title>Cweb</title>
+    <title>Imobiliária DoceLar</title>
 </head>
 
 <!--inicio do body-->
@@ -18,16 +18,16 @@
             <!-- container -->
             <div class="container">
                 <nav>
-                    <div class="logo"><a href="index.html">Cweb</a></div>
+                    <div class="logo"><a href="index.html">DoceLar</a></div>
                     <ul class="ul">
-                        <li> <a href="#home"#>home</a> </li>
-                        <li> <a href="#servicos"#>serviços</a> </li>
-                        <li> <a href="#sobre"#>sobre</a> </li>
-                        <li> <a href="#contato"#>contato</a> </li>
-                        <li> <a href="#"#> <button class="btn-gradient">Começar</button> </a> </li>
+                        <li> <a href="#home">HOME</a> </li>
+                        <li> <a href="#servicos">Serviços</a> </li>
+                        <li> <a href="#sobre">Sobre</a> </li>
+                        <li> <a href="#contato">Contato</a> </li>
+                        <li> <a href="#"> <button class="btn-gradient">Começar</button> </a> </li>
                     </ul>
                     <div class="menu-icon">
-                        <img src="img/menu.png" alt="icone de menu">
+                        <img src="img/menu.png" alt="ícone de menu">
                     </div>
                 </nav>
             </div>
@@ -39,17 +39,16 @@
         <main id="home">
             <div class="container">
                 <div class="main-text">
-                    <h1>CWEB IMOBILIARIA</h1>
-                    <h2>MODERNO E CLASSICO</h2>
+                    <h1>DoceLar IMOBILIÁRIA</h1>
+                    <h2>MODERNO E CLÁSSICO</h2>
                     <div>  
                         <button class="btn-gradient">Reserve Agora</button>
-                        <img src="img/verificado.png" alt="verificado">
+                        <img src="img/verificado.png" alt="ícone de verificado">
                     </div>
                 </div>
 
                 <div class="main-img">
-                    <img src="img/img1.png" alt="3 homens">
-
+                    <img src="img/img1.png" alt="três homens">
                 </div>
             </div>
         </main>
@@ -62,7 +61,7 @@
         <!--container-->
         <div class="container">
             <div class="resultados-text">
-                Ajudando pessoas e grandes empressas com foco no conforto
+                Ajudando pessoas e empresas com foco no conforto
             </div>
             <div class="resultados-numero">
                 <p>
@@ -72,14 +71,13 @@
             
                 <p>
                     <span>150</span><br>
-                    funcionarios
+                    funcionários
                 </p>
 
                 <p>
                     <span>8 mil</span><br>
                     projetos
                 </p>
-                  
             </div>
         </div>
         <!--final container-->
@@ -94,7 +92,7 @@
                 <!--card diferenciais-->
                 <div class="card">
                     <img src="img/medal.png" alt="medalha">
-                    <h3 class="titulo">Empresa Profissinal</h3>
+                    <h3 class="titulo">Empresa Profissional</h3>
                     <p>CorteCana é uma empresa que foi criada em 1984 para satisfazer a demanda de componentes para a
                         indústria de implementos agrícolas. </p>
                 </div>
@@ -102,13 +100,13 @@
                     <img src="img/24h.png" alt="24 horas">
                     <h3 class="titulo">Atendimento 24 horas</h3>
                     <p>A empresa está instalada estrategicamente em uma área de 20.000 m² e deseja satisfazer a demanda
-                        crescente por seus produtos através da compra de equipamentos mais modernos </p>
+                        crescente por seus produtos através da compra de equipamentos mais modernos. </p>
                 </div>
                 <div class="card">
                     <img src="img/caixa.png" alt="caixa">
-                    <h3 class="titulo">Servindo em vários Paises</h3>
+                    <h3 class="titulo">Servindo em vários Países</h3>
                     <p>Investidores potenciais de um novo negócio perguntarão: "Por que deveríamos investir o nosso dinheiro
-                        na sua equipe gerencial" </p>
+                        na sua equipe gerencial?" </p>
                 </div>
                 <!--card diferenciais-->
             </div>
@@ -130,7 +128,7 @@
                     À medida que o negócio cresce e as vendas aumentam, mais pessoal é necessário. Faça uma previsão
                     de como a sua empresa crescerá e quantos funcionários adicionais serão necessários.
                 </p>
-                <img src="img/user-happy.png" alt="user-happy">
+                <img src="img/user-happy.png" alt="usuário feliz">
                 <p>
                     <b>+50 clientes felizes</b>
                 </p>
@@ -147,7 +145,7 @@
         <!--container-->
         <div class="container">
 
-            <p id="contato" class="azul">escolha o seu melhor</p>
+            <p id="contato" class="azul">Escolha o seu melhor</p>
             <h2>30 melhores lugares do mundo</h2>
 
             <!--cards-->
@@ -200,11 +198,11 @@
             <div class="box-newsletter">
                 <h2>Inscreva-se no nosso feed</h2>
                 <p>
-                    Se inscreva para receber conteudos, novidades e dicas importantes.
+                    Inscreva-se para receber conteúdos, novidades e dicas importantes.
                 </p>
                 <form>
-                    <input type="email" placeholder="digite seu email">
-                    <button >Inscreva-se</button>
+                    <input type="email" placeholder="Digite seu email">
+                    <button>Inscreva-se</button>
                 </form>
             </div>
         </div>
@@ -215,9 +213,8 @@
         <div class="container">
             <ul>
                 <!--ul 1-->
-                <h3>Cweb</h3>
-                <P>Somos uma empresa 
-                dedicada de imobiliaria</P>
+                <h3>DoceLar</h3>
+                <p>Proporcionando conforto e confiança.</p>
                 <div class="redes-sociais">
                     <img src="img/facebook.png" alt="facebook">
                     <img src="img/instagram.png" alt="instagram">
@@ -243,7 +240,7 @@
                 <h3>Suporte</h3>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Como funciona</a></li>
-                <li><a href="#">Caracteisticas</a></li>
+                <li><a href="#">Características</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Comunicando</a></li> 
             </ul>
@@ -251,7 +248,7 @@
 
             <!--ul 4-->
             <ul>
-                <h3>Nós contate</h3>
+                <h3>Entrar em contato</h3>
                 <li>(55) 41 9945-6788</li>
                 <li>seila@gmail.com</li>
                 <li>Brasil</li>
